hopefully done with backend2

--- a/Keeper.client/src/assets/scss/_variables.scss
+++ b/Keeper.client/src/assets/scss/_variables.scss
@@ -1,11 +1,11 @@
 $themes: (
   default: (
-    "body-bg": #e5e5e5,
-    "primary": #3ba5dc,
-    "secondary": #8392ab,
-    "success": #00f867,
-    "info": #5d0149,
-    "warning": #fbcf33,
+    "body-bg": #FEF6F0,
+    "primary": #F9F6FA,
+    "secondary": #E9D8D6,
+    "success": #DED6E9,
+    "info": #877A8F,
+    "warning": #2D2D2D,
     "danger": #ea0606,
     "light": #e9ecef,
     "dark": #111927,
