--- a/Keeper.client/src/assets/scss/_variables.scss
+++ b/Keeper.client/src/assets/scss/_variables.scss
@@ -6,7 +6,7 @@ $themes: (
     "success": #DED6E9,
     "info": #877A8F,
     "warning": #2D2D2D,
-    "danger": #ea0606,
+    "danger": #f4b5b5,
     "light": #e9ecef,
     "dark": #111927,
     "grey": #cbcbcb,
